COMMIT EDITADO DESDE SUBLIME TEXT

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>Invie</title>
+	<title>Invie page</title>
 </head>
 <body>
 	<img src="header.jpg" alt="">
