--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Invie page</title>
+
+
+	<style>
+		body{
+			margin: 0;			
+		}
+		img{
+			max-width: 100%;
+			vertical-align: top: ;
+		}
+	</style>
 </head>
 <body>
 	<img src="header.jpg" alt="">
