--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Invie page</title>
+	<style media="screen">
+		body{
+			margin: 0;			
+		}
+		img{
+			max-width: 100%;
+			vertical-align: top;			
+		}
+		img #responsive{
+			display: none;
+		}
+		@media screen and (max-width: 768px){
+			img #responsive{
+				display: block;
+
+			}
+		}
+	</style>
 </head>
 <body>
-	<img src="header.jpg" alt="">
+	<img src="invie-responsive.png" alt="" id="responsive">
 	<img src="hero.jpg" alt="">
 	<img src="acustica.jpg" alt="">
 	<img src="clasica.jpg" alt="">
